fix featured section mobile view background bug

--- a/src/components/Featured/Featured.module.css
+++ b/src/components/Featured/Featured.module.css
@@ -327,19 +327,16 @@
 
 .img {
   display: block;
-  width: 100%;
-  height: auto;
   border-radius: var(--border-radius);
   mix-blend-mode: multiply;
-  filter: grayscale(100%) contrast(1) brightness(90%);
   object-fit: cover;
+  filter: grayscale(100%) contrast(1) brightness(50%);
 }
 
-@media (max-width: 768px) {
+@media (min-width: 769px) {
   .img {
     width: 100%;
     height: auto;
-    object-fit: cover;
-    filter: grayscale(100%) contrast(1) brightness(50%);
+    filter: grayscale(100%) contrast(1) brightness(90%);
   }
 }
